syntax = "proto3";

package proto_utils;

message Point {
  float x = 1;
  float y = 2;
}

message PointInt {
  int32 x = 1;
  int32 y = 2;
}

message Point3 {
  float x = 1;
  float y = 2;
  float z = 3;
}

message Point3Int {
  int32 x = 1;
  int32 y = 2;
  int32 z = 3;
}
